crates/ndc-clickhouse/tests/snapshots/query_builder__chinook Inlined SQL@01_simple_queries_02_with_predicate.request.json.snap
---
source: crates/ndc-clickhouse/tests/query_builder.rs
expression: inlined_sql
input_file: crates/ndc-clickhouse/tests/query_builder/chinook/01_simple_queries_02_with_predicate.request.json
---
SELECT
  toJSONString(
    groupArray(
      cast(
        "_rowset"."_rowset",
        'Tuple(rows Array(Tuple("albumId" Int32, "artistId" Int32, "title" String)))'
      )
    )
  ) AS "rowsets"
FROM
  (
    SELECT
      tuple(
        groupArray(
          tuple(
            "_row"."_field_albumId",
            "_row"."_field_artistId",
            "_row"."_field_title"
          )
        )
      ) AS "_rowset"
    FROM
      (
        SELECT
          "_origin"."AlbumId" AS "_field_albumId",
          "_origin"."ArtistId" AS "_field_artistId",
          "_origin"."Title" AS "_field_title"
        FROM
          "Chinook"."Album" AS "_origin"
        WHERE
          "_origin"."ArtistId" = '1'
      ) AS "_row"
  ) AS "_rowset" FORMAT TabSeparatedRaw;
